--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,28 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-brands-svg-icons": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@reduxjs/toolkit": "^2.0.1",
+    "@tailwindcss/forms": "^0.5.7",
+    "axios": "^1.6.4",
+    "emotion": "^11.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-emotion": "^10.0.0",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-modal": "^3.16.1",
+    "react-redux": "^9.0.4",
+    "rebass": "^4.0.7",
+    "redux-saga": "^1.3.0",
+    "styled-components": "^6.1.6",
+    "styled-normalize": "^8.1.0",
+    "styled-system": "^5.1.5",
+    "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
